# commandergenius

./: .gitignore  .gitmodules  AndroidAppSettings.cfg  AppSettings.cfg  CMakeLists.txt  ChangeAppSettings.sh  RecompileAllApps.sh  aar2jar.py  app2sd.sh  bugs.txt  build.sh  buildQuick.sh  changeAppSettings.sh  checkExports.sh  checkMissing.sh  checkStaticDataSize.sh  copyAssets.sh  createSourceArchive.sh  exports-eclair.txt  generateExports.sh  readme.txt  recordUserInput.sh  regression.sh  sign.sh  src  start.sh  todo.txt  uninstall.sh
alienblaster/: AppSettings.cfg  Application.mk  ChangeAppSettings.sh  build.sh  readme.txt
alienblaster/project/: AndroidManifest.xml  Application.mk  local.properties
project/: AndroidManifest.xml  AndroidManifestTemplate.xml  proguard.cfg
project/java/: Accelerometer.java  Advertisement.java  Audio.java  Clipboard.java  CloudSave.java  DataDownloader.java  DummyService.java  EditableSurfaceView.java  GLSurfaceView_SDL.java  Globals.java  Keycodes.java  MainActivity.java  RestartMainActivity.java  Settings.java  SettingsMenu.java  SettingsMenuKeyboard.java  SettingsMenuMisc.java  SettingsMenuMouse.java  Video.java  XZInputStream.java
project/javaSDL2/: DataDownloader.java  GLSurfaceView_SDL.java  Globals.java  Keycodes.java  MainActivity.java  Settings.java  SettingsMenu.java  SettingsMenuKeyboard.java  Video.java  (+3 more)
project/jni/application/lbreakout2-2.6.2/: AndroidAppSettings.cfg  AndroidBuild.sh  ChangeLog  Makefile.am  Makefile.in  configure  configure.in
project/jni/application/lbreakout2-2.6.2/client/: Makefile.in  bricks.c  chart.c  client.c  client_data.c  comm.h  display.h  editor.c  lbreakout.h  main.c  manager.c  menu.c  misc.c  misc.h  shine.c  shots.c  shrapnells.c  theme.h
project/jni/application/lbreakout2-2.6.2/client/gfx/Classic/: Makefile.am
project/jni/application/lbreakout2-2.6.2/client/gfx/Oz/: Makefile.in
project/jni/application/lbreakout2-2.6.2/client/levels/: Makefile.am  Makefile.in
project/jni/application/lbreakout2-2.6.2/client/sounds/: Makefile.am  Makefile.in
project/jni/application/lbreakout2-2.6.2/common/: Makefile.am  Makefile.in  list.h  tools.c
project/jni/application/lbreakout2-2.6.2/game/: Makefile.am  bricks.c  game.h  gamedefs.h
project/jni/application/lbreakout2-2.6.2/gui/: Makefile.in  gui.h  gui_box.h  gui_label.h  gui_list.h  gui_spinbutton.c  stk.c
project/jni/application/lbreakout2-2.6.2/po/: Makevars  de.gmo  de.po  fr.gmo  fr.po  lbreakout2.pot  tr.gmo  tr.po
project/jni/application/lbreakout2-2.6.2/server/: server_game.c  server_game.h
project/jni/application/lbreakout2-2.6.2/server/levels/: Makefile.in
project/jni/application/lbreakout2-hwaccel/client/: Makefile.am  bricks.h  chart.h  client.h  client_data.h  config.c  config.h  credit.c  credit.h  display.c  editor.h  empty.hscr  event.h  extras.h  frame.h  game.c  help.h  hint.c  item.h  manager.c  manager.h  menu.c  menu.h  misc.c  paddle.c  paddle.h  player.c  player.h  shine.h  shrapnells.h  slot.c  value.c
project/jni/application/lbreakout2-hwaccel/client/gfx/: Makefile.am  Makefile.in
project/jni/application/lbreakout2-hwaccel/client/gfx/AbsoluteB/: ABOUT  Makefile.am  Makefile.in
project/jni/application/lbreakout2-hwaccel/client/gfx/Moiree/: Makefile.in
project/jni/application/lbreakout2-hwaccel/client/gfx/Oz/: Makefile.am
project/jni/application/lbreakout2-hwaccel/client/gui_theme/: Makefile.am  Makefile.in
project/jni/application/lbreakout2-hwaccel/client/levels/: AllNighter  Megadoomer  TheEnd
project/jni/application/lbreakout2-hwaccel/docs/: Makefile.am  Makefile.in  index.html
project/jni/application/lbreakout2-hwaccel/gui/: Makefile.am  gui.c  gui_button.c  gui_edit.c  gui_edit.h  gui_list.c  gui_progressbar.c  gui_radiogroup.c  gui_radiogroup.h  gui_scrollbar.c  gui_spinbutton.h  gui_theme.c  gui_theme.h  gui_widget.h  list.c  stk.c
project/jni/application/lbreakout2-hwaccel/server/levels/: Makefile.am  N_Arenas  N_Snapshots
project/jni/application/lbreakout2/client/gfx/Moiree/: ABOUT  Makefile.am
project/jni/application/lbreakout2/client/levels/: Makefile.am  Makefile.in  OurWorld
project/jni/application/lmarbles-1.0.8/: AUTHORS  AndroidAppSettings.cfg  AndroidBuild.sh  ChangeLog  LMarbles.prj  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.in  lmarbles.desktop.in  lmarbles.spec  mkinstalldirs
project/jni/application/lmarbles-1.0.8/src/: Makefile.am  Makefile.in  audio.c  audio.h  cfg.c  cfg.h  dynlist.c  dynlist.h  empty.prfs  file.c  file.h  game.c  game.h  levels.c  levels.h  lmarbles.6  main.c  menu.c  menu.h  profile.c  profile.h  sdl.c  sdl.h  timer.c  timer.h
project/jni/application/lmarbles-1.0.8/src/gfx/: tiny.sdlfnt
project/jni/application/lmarbles-1.0.8/src/levels/: Original
project/jni/application/lmarbles-1.0.8/src/manual/: manual.html
project/jni/application/ltris-1.0.15/: AUTHORS  AndroidAppSettings.cfg  AndroidBuild.sh  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  ltris.desktop.in
project/jni/application/ltris-1.0.15/icons/: Makefile.am  Makefile.in  ltris16.xpm  ltris32.xpm  ltris48.xpm
project/jni/application/ltris-1.0.15/m4/: Makefile.in
project/jni/application/ltris-1.0.15/po/: LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  it.gmo  it.po  ltris.pot  nonascii.pl  pt.gmo  pt.po  pt.po_full  sv.gmo  sv.po  tr.gmo  tr.po  tr.po_full
project/jni/application/ltris-1.0.15/src/: Makefile.am  Makefile.in  audio.c  audio.h  bowl.c  bowl.h  chart.c  chart.h  config.c  config.h  cpu.c  cpu.h  empty.hscr  event.c  event.h  figures  gettext.h  gfx.S  gfx.h  hint.c  hint.h  item.c  item.h  list.c  list.h  ltris.h  main.c  manager.c  manager.h  menu.c  menu.h  parser.c  parser.h  sdl.c  sdl.h  shrapnells.c  shrapnells.h  tetris.c  tetris.h  tools.c  (+2 more)
project/jni/application/ltris-1.0.15/src/gfx/: Makefile.am  Makefile.in
project/jni/application/ltris-1.0.15/src/sounds/: Makefile.am  Makefile.in
src/: Debug.cpp  FindFile.cpp  FindFile.h  Iterator.h  misc.cpp
(+3264 files in other folders)
