DEFS = @network_flag@ @sdlnet_flag@ @arch_flag@ @inst_flag@ @DEFS@ 

noinst_LIBRARIES = libgame.a

libgame_a_SOURCES = \
  game.c \
  levels.c \
  shots.c \
  bricks.c \
  paddle.c \
  extras.c \
  balls.c \
  mathfuncs.c \
  comm.c
  
EXTRA_DIST = game.h levels.h shots.h balls.h \
bricks.h extras.h paddle.h mathfuncs.h comm.h \
gamedefs.h

