DEFS = @DEFS@ @inst_flag@ @audio_flag@

noinst_LIBRARIES = libGui.a

libGui_a_SOURCES = list.c stk.c \
gui.c gui_widget.c gui_theme.c \
gui_box.c gui_button.c gui_label.c gui_icon.c \
gui_radiogroup.c gui_scrollbar.c gui_progressbar.c \
gui_list.c gui_edit.c gui_spinbutton.c

EXTRA_DIST = list.h stk.h \
gui.h gui_widget.h gui_theme.h \
gui_box.h gui_button.h gui_label.h gui_icon.h \
gui_radiogroup.h gui_scrollbar.h gui_progressbar.h \
gui_list.h gui_edit.h gui_spinbutton.h

